src/z80asm/z80asm2/t/40-syntax/expected/dw_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/dw_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/dw_01.asm...
t/40-syntax/input/dw_01.asm:1:3: error: Expression expected
    dw
      ^
t/40-syntax/input/dw_01.asm:2:1: error: Unterminated expression after "dw"
    dw ,
    ^
t/40-syntax/input/dw_01.asm:4:16: error: Expression expected
    dw 1,2,3,1+2*3,
                   ^
t/40-syntax/input/dw_01.asm:5:16: error: Unexpected token: "@"
    dw 1,2,3,1+2*3 @
                   ^
Program: dw_01
    Modules:
        Module: dw_01 (current)
            Sections:
                Section: "" (current)
                    Size: 0
    Statements:
        OpcodeStmt
            Location: t/40-syntax/input/dw_01.asm:3:1
            Address: 0
            Bytes: 0 0 0 0 0 0 0 0
            Patches:
                Patch
                    Location: t/40-syntax/input/dw_01.asm:3:4
                    Value type: Unknown
                    Tokens: 1
                    Offset: 0, Size: 2
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/dw_01.asm:3:4
                            Value type: Unknown
                            Tokens: 1
                Patch
                    Location: t/40-syntax/input/dw_01.asm:3:6
                    Value type: Unknown
                    Tokens: 2
                    Offset: 2, Size: 2
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 2
                            Location: t/40-syntax/input/dw_01.asm:3:6
                            Value type: Unknown
                            Tokens: 2
                Patch
                    Location: t/40-syntax/input/dw_01.asm:3:8
                    Value type: Unknown
                    Tokens: 3
                    Offset: 4, Size: 2
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 3
                            Location: t/40-syntax/input/dw_01.asm:3:8
                            Value type: Unknown
                            Tokens: 3
                Patch
                    Location: t/40-syntax/input/dw_01.asm:3:12
                    Value type: Unknown
                    Tokens: 1+2*3
                    Offset: 6, Size: 2
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprBinary: +
                            Location: t/40-syntax/input/dw_01.asm:3:12
                            Value type: Unknown
                            Tokens: 1+2*3
                            LHS:
                                ExprLiteralInt: 1
                                    Location: t/40-syntax/input/dw_01.asm:3:10
                                    Value type: Unknown
                                    Tokens: 
                            RHS:
                                ExprBinary: *
                                    Location: t/40-syntax/input/dw_01.asm:3:14
                                    Value type: Unknown
                                    Tokens: 
                                    LHS:
                                        ExprLiteralInt: 2
                                            Location: t/40-syntax/input/dw_01.asm:3:12
                                            Value type: Unknown
                                            Tokens: 
                                    RHS:
                                        ExprLiteralInt: 3
                                            Location: t/40-syntax/input/dw_01.asm:3:14
                                            Value type: Unknown
                                            Tokens: 
